Updated draft of tailor-with-data

--- a/docs/ideas/tailor-with-data.mdx
+++ b/docs/ideas/tailor-with-data.mdx
@@ -9,27 +9,27 @@ import TabItem from '@theme/TabItem';
 import { LeadText } from '../../src/components/LeadText.js';
 import { Countdown } from '../../src/components/Countdown.js';
 
-<LeadText content="Everyone and his boss are talking about personalization. Most stop at tailoring the content. Don't be that person. Utilise the power of simple data logic and control the user flows." />
+<LeadText content="Everyone and his boss are talking about personalisation. Most stop at tailoring the content. Don't be that person. Utilise the power of simple data logic and control the user flows." />
 
 ## Outline
 
 1. [Review the use cases possible thanks to the tailored data logic](#leverage-the-data)
 2. [Check easy to implement script examples](#script-your-solution)
-3. [Create personalization fueled conditional user flows](#create-conditional-logic)
+3. [Create personalisation fueled conditional user flows](#create-conditional-logic)
 
 
 ## Leverage the data
 
-Most Marketing Automation tools allow you to use the contact and account data for personalization. Inserting a user-specific value from a data model to landing page or e-mail? Creating custom content tailored to the user? Easy and simple. [Eloqua](https://www.oracle.com/marketingcloud/products/marketing-automation/ "Oracle Eloqua Marketing Automation Platform")'s [Field Merges](https://docs.oracle.com/cloud/latest/marketingcs_gs/OMCAA/Help/FieldMerges/FieldMerges.htm "Field Merge Documentation") or [Marketing Cloud](https://www.salesforce.com/eu/products/marketing-cloud/overview/ "Salesforce Marketing Cloud Platform")'s personalization strings are made for it. But you can do so much more!
+Most Marketing Automation tools allow you to use the contact and account data for personalisation. Are you inserting a user-specific value from a data model to landing page or email? Creating custom content tailored to the user? Easy and simple. [Eloqua](https://www.oracle.com/marketingcloud/products/marketing-automation/ "Oracle Eloqua Marketing Automation Platform")'s [Field Merges](https://docs.oracle.com/cloud/latest/marketingcs_gs/OMCAA/Help/FieldMerges/FieldMerges.htm "Field Merge Documentation"), or [Marketing Cloud](https://www.salesforce.com/eu/products/marketing-cloud/overview/ "Salesforce Marketing Cloud Platform")'s personalisation strings can do it. But you can do so much more!
 
 ### Change the structure of the landing page
-Part of your subscription centre should be visible only to your clients? Instead of creating and managing two separate pages, you can use personalization to check whether the visitor has any license and unhide product-related data & subscription section.
+Part of your subscription centre should be visible only to your clients? Instead of creating and managing two separate pages, you can use personalisation to check whether the visitor has any license and unhide product-related data & subscription section.
 
 ### Create a genuinely dynamic form
-Not keen on asking your customers, again and again, the same questions in your content form? Use personalization to hide form fields that won't give you new knowledge. The shorter the form, the better.
+Not keen on asking your customers, again and again, the same questions in your content form? Use personalisation to hide form fields that won't give you new knowledge. The shorter the form, the better.
 
 ### Enrich your data
-You got multi picklist storing information on topics that are interesting to your customers? Want to use white paper download form to add such data point? Sure, all Marketing Automation Platforms have form processing that will be able to append such value. But unfortunately, it in most it is not possible to check whether it already is added to that field. You guessed it, personalization with a simple script can fix it.
+You got multi picklist storing information on topics that are interesting to your customers? Want to use white paper download form to add such data point? Sure, all Marketing Automation Platforms have form processing that will be able to append such value. But unfortunately, it in most it is not possible to check whether it already is added to that field. You guessed it, personalisation with a simple script can fix it.
 
 ## Script your solution
 
@@ -45,15 +45,15 @@ Time to create a script that will solve the problems mentioned above. Firstly, y
 >
 <TabItem value='sfmc'>
 
-For Marketing Cloud, the easiest way is to use the personalization string. The code is straightforward:
+For Marketing Cloud, the easiest way is to use the personalisation string. The code is straightforward:
 
 ```html
 <ctrl:field name=ProfileAttributeName />
 ```
 
-The only thing you need is the name of ProfileAttribute or field from source Sendable Data Extension. It gets a bit more elaborate if you want to leverage other source, but absolutely viable. You can use Lookup function to capture data points from other Data Extensions. Even Salesforce Objects are in the scope with a bit of AMPScript.
+The only thing you need is the name of the Profile Attribute or Data Extension field. It gets a bit more elaborate if you want to leverage other sources, but still viable with SSJS. You can use the Lookup function to capture data points from other Data Extensions. Even Salesforce Objects are in the scope with a bit of AMPScript.
 
-In most places of Marketing Cloud you can leverage built-in menu to add such personalization string (in its AMPScript version).
+In most places of Marketing Cloud, you can leverage built-in menu to add such personalisation string (in its AMPScript version).
 
 </TabItem>
 <TabItem value='eloqua'>
@@ -71,15 +71,15 @@ In most cases it is very similar to the original Field Merge name, in some - lik
 </TabItem>
 </Tabs>
 
-To create a script that will allow for three use cases mentioned in the first part of the post, we need one more thing - an `id` attribute. Some elements will already have it (for example, in Eloqua each form field exists in separate div element: `<div id="formElement1" ...>`). The rest will need you to add it to the HTML manually.
+To create a script that will allow for three use cases mentioned in the first part of the post, we need one more thing - an `id` attribute. Some elements will already have it (for example, in Eloqua each form field exists in separate div element: `<div id='formElement1' ...>`). The rest will need you to add it to the HTML manually.
 
 :::note You Should Know
 
-You are not limited to `id` attribute. You can leverage any attribute and caputre it with `document.querySelector()` or `document.querySelectorAll()`. Capturing `class` is great to change multiple parts of the website at once.
+You are not limited to the `id` attribute. You can leverage any attribute and capture it with `document.querySelector()` or `document.querySelectorAll()`. Capturing `class` is great to change multiple parts of the website at once.
 
 :::
 
-With personalization code and value of the `id` attribute at hand, we can start the (short) scripting.
+With personalisation code and value of the `id` attribute at hand, we can start the (short) scripting.
 
 ### Hiding elements on the website
 
@@ -97,7 +97,7 @@ With personalization code and value of the `id` attribute at hand, we can start 
 <script>
     window.addEventListener('load', () => { // 1.
         if ('<ctrl:field name=EmailOptedIn />' === 'True') { // 2.
-            document.querySelector("#idValue").display = "none"; // 3.
+            document.querySelector('#idValue').display = 'none'; // 3.
         };
     };
 </script>
@@ -110,7 +110,7 @@ With personalization code and value of the `id` attribute at hand, we can start 
 <script>
     window.addEventListener('load', () => { // 1.
         if ('<span class=eloquaemail>EmailOptedIn1</span>' === 'True') { //2.
-            document.querySelector("#idValue").display = "none"; // 3.
+            document.querySelector('#idValue').display = 'none'; // 3.
         };
     };
 </script>
@@ -121,11 +121,11 @@ With personalization code and value of the `id` attribute at hand, we can start 
 
 Above script has three important lines that deserve some explanation.
 
-First one tells the web browser to launch the logic only after the whole page loaded. It is very important, as it guarantees that the website element you want to hide was already rendered by the browser.
+First one tells the web browser to launch the logic only after the whole page loaded. It is essential, as it guarantees that the browser already rendered the website element you want to hide.
 
-Next is the `if` statement. It evaluates the value stored in the data model received via personalization (left side of ==) with another value we choose (right side of ==). In this case, it checks whether Email Opted In for a particular user is set to True (that value may differ in your data model).
+Next is the `if` statement. It evaluates the value stored in the data model received via personalisation (left side of ==) with another value we choose (right side of ==). In this case, it checks whether Email Opted In for a particular user is set to True (that value may differ in your data model).
 
-Third line looks for an HTML element with id equal to `'idValue'` and hides it from the user.
+The third line looks for an HTML element with id equal to `'idValue'` and hides it from the user.
 
 :::note You Should Know
 
@@ -153,8 +153,8 @@ For our data enrichment use case, we will need to alter the script slightly.
 <script>
     window.addEventListener('load', () => { // 1.
         const regexSearchValue = /Tax/; // 2.
-        if (regexSearchValue.test("<ctrl:var name=Interests />")) { // 3.
-            document.querySelector("#alreadyInterested").value = 'True'; // 4.
+        if (regexSearchValue.test('<ctrl:field name=Interests />')) { // 3.
+            document.querySelector('#alreadyInterested').value = 'True'; // 4.
         };
     };
 </script>
@@ -167,8 +167,8 @@ For our data enrichment use case, we will need to alter the script slightly.
 <script>
     window.addEventListener('load', () => { // 1.
         const regexSearchValue = /Tax/; // 2.
-        if (regexSearchValue.test("<span class=eloquaemail>Interests1</span>")) { // 3.
-            document.querySelector("#alreadyInterested").value = 'True'; // 4.
+        if (regexSearchValue.test('<span class=eloquaemail>Interests1</span>')) { // 3.
+            document.querySelector('#alreadyInterested').value = 'True'; // 4.
         };
     };
 </script>
@@ -177,29 +177,39 @@ For our data enrichment use case, we will need to alter the script slightly.
 </TabItem>
 </Tabs>
 
-In this scenario we have a multipicklist field `Interests` that captures what captivates specific customer. If the is fascinated by more than one topic, the names are semicolon separated. Nice marketing tactic is to enrich this list each time the customer engages with something directly related to a particular topic. For example downloads whitepaper deep-diving on taxes.
+In this scenario, we have a multi picklist field `Interests` that captures what captivates specific customer. If the is fascinated by more than one topic, the names are semicolon-separated. A nice marketing tactic is to enrich this list each time the customer engages with something directly related to a particular topic. For example, downloads whitepaper deep-diving on taxes.
 
-In most Marketing Automation Platforms it is really easy to just append interest to such field. This, however, leads to a (quite big) possibility of having the same interest added multiple times. And this is neither good from the data quality perspective nor field length compliance.
+In most Marketing Automation Platforms, it is strightforward to to append interest to such field. Appending, however, leads to a (quite big) possibility of having the same value added multiple times. And this is neither good from the data quality perspective nor field length compliance.
 
-So how to use the above script to enrich your data cleanly? We will need a hidden form field inside the white paper download form. In the form HTML look for input attribute of this hidden field (`<input id="alreadyInterested" type="hidden" ...>`). The `id` attribute will be useful again.
+So how to use the above script to enrich your data cleanly? We will need a hidden form field inside the white paper download form. In the form HTML look for input attribute of this hidden field (`<input id='alreadyInterested' type='hidden' ...>`). The `id` attribute will be useful again.
 
-You already know the first line from previous section. The new things come next. We declare value we want to check in our data model picklist. In this example, we will test whether the user is already interested in Tax topic. The `/` before and after the word are special characters used for [regular expression](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions "MDN Documentation on Regular_Expressions").
+You already know the first line from the previous section. The new things come next. We declare value we want to check in our data model picklist. In this example, we will test whether the user is already interested in Tax topic. The `/` before and after the word are special characters used for a [regular expression](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions "MDN Documentation on Regular_Expressions").
 
-The third line is the fastest way to check whether the declared value is already in `Interests` field. If it is, then the script will evaluate the line below.
+The third line is the fastest way to check whether the declared value is already in the `Interests` field. If it is, then the script will evaluate the line below.
 
-Finally, in case of the value already being in the multi picklist, we put True inside the hidden form field. With it is done, we can then utilise form processing to append new interest conditionally - only if hidden field is blank in the submission data.
+Finally, in case of the value already being in the multi picklist, we put True inside the hidden form field. It enables us to utilise form processing to append new interest conditionally - only if the hidden field is blank in the submission data.
 
 ## Create conditional logic
 
-Simple manipulation of visibility and values on your landing page is just beginning. You can get even more out of scripted personalizations and take control over user & data flows.
+Simple manipulation of visibility and values on your landing page is just beginning. You can get even more out of scripted-backed personalisations and take control over user & data flows.
 
-Looking for an excellent way to tell your Google Analytics whether the user just downloaded a white paper or did he also wanted to receive product presentation on top of that? Not keen on creating two mirror-like thank you pages with different conversion script? Sure!
+Looking for an excellent way to tell your Google Analytics whether the user just downloaded a white paper or did he also wanted to receive product presentation on top of that? Not keen on creating two mirror-like Thank You pages with different conversion script? Sure!
 
-Your form should have a processing step that appends date stamp to a data model field in case of the user becoming a lead (asking for a product presentation). This data, apart from being a great source of knowledge for your lead reporting and data processing trigger, will be handy for this solution.
+<Tabs
+    groupId='marketingAutomationPlatforms'
+    defaultValue='sfmc'
+    values={[
+        {label: 'Salesforce Marketing Cloud', value: 'sfmc'},
+        {label: 'Oracle Eloqua', value: 'eloqua'},
+    ]}
+>
+<TabItem value='sfmc'>
+
+Your form processing page should have a rule for adding step that appends date stamp to a data model field in case of the user becoming a lead (asking for a product presentation). This data, apart from being a great source of knowledge for your lead reporting and data processing trigger, will be handy for this solution.
 
 ```html
 <script>
-    var leadCreationDate = "<span class=eloquaemail>LeadCreationTriggerDate1</span>";
+    const leadCreationDate = '<ctrl:field name=leadCreationDate />';
     if (Date.now() - new Date(leadCreationDate) < 22680000) {
         dataLayer.push({
             // Your Lead conversion dataLayer model
@@ -212,20 +222,71 @@ Your form should have a processing step that appends date stamp to a data model 
 </script>
 ```
 
-Sample code required trigger Google Analytics conversion dataLayers conditionally
-Why? Because you can check how distant in the past the Field Merged date is. And if it is within minutes, you can be pretty sure the user just became your lead. Which tells the script to push the lead conversion data layer instead of the whitepaper data layer. Simple and quick.
-Eloqua is applying the date in their servers timezone (CET/CEST).
+</TabItem>
+<TabItem value='eloqua'>
+
+Your form should have a processing step that appends date stamp to a data model field in case of the user becoming a lead (asking for a product presentation). This data, apart from being a great source of knowledge for your lead reporting and data processing trigger, will be handy for this solution.
+
+```html
+<script>
+    const leadCreationDate = '<span class=eloquaemail>LeadCreationTriggerDate1</span>';
+    if (Date.now() - new Date(leadCreationDate) < 22680000) {
+        dataLayer.push({
+            // Your Lead conversion dataLayer model
+        });
+    } else {
+        dataLayer.push({
+            // Your Whitepaper conversion dataLayer model
+        });
+    }
+</script>
+```
+
+</TabItem>
+</Tabs>
+
+Why? Because once you have this script on your Thank You page, you can check how distant in the past the personalised date is. And if it is within minutes, you can be pretty sure the user just became your lead. Which tells the script to push the lead conversion data layer instead of the whitepaper data layer. Simple and quick.
+
+Remember to take into consideration the difference between local time and server time, which might play a role depending on Marketing Automation Platform and configuration.
 
 ### Possibilities are endless.
 
-Want to be sure only recognised users will enter your subscription centre? Add e-mail address Field Merge. If it is empty, it means Eloqua did not recognise this user. JavaScript can automatically redirect him to your subscription centre entry form.
+Want to be sure only recognised users will enter your subscription centre?
+
+<Tabs
+    groupId='marketingAutomationPlatforms'
+    defaultValue='sfmc'
+    values={[
+        {label: 'Salesforce Marketing Cloud', value: 'sfmc'},
+        {label: 'Oracle Eloqua', value: 'eloqua'},
+    ]}
+>
+<TabItem value='sfmc'>
+
+Add email address Field Merge. If it is empty, it means Eloqua did not recognise this user. JavaScript can automatically redirect him to your subscription centre entry form.
 
 ```js
- if ("<span class=eloquaemail>​EmailAddress​</span>" == "") {
-    window.location.replace(​"https://redirect.here")
+ if ('<ctrl:field name="Email Address" />' == '') {
+    window.location.replace(​'https://redirect.here')
+}
+```
+
+Want to double-check by querying the Salesforce Core? Add API call within the condition. You can also push some information from a data extension, or profile attributes to an external page. Personalise that data and use JavaScript to append it to redirect link as a query string or send it as a payload within POST call. Imagination is the only limit.
+
+</TabItem>
+<TabItem value='eloqua'>
+
+Add email address or contact key personalisation. If it is empty, it means Marketing Cloud did not recognise this user. JavaScript can automatically redirect him to your subscription centre entry form.
+
+```js
+if ('<span class=eloquaemail>​EmailAddress​</span>' == '') {
+    window.location.replace(​'https://redirect.here')
 }
 ```
 
 Want to push some information from a data model to an external page? Field Merge that data and use JavaScript to append it to redirect link as a query string.
 
-You can get even more power with using dynamic content (perfect for simplifying javascript logic) or web data lookups (allows you to leverage e-mail group subscription, shared list audience › even on external websites). Imagination is the only limit.
+You can get even more power with using dynamic content (perfect for simplifying javascript logic) or web data lookups (allows you to leverage email group subscription, shared list audience › even on external websites). Imagination is the only limit.
+
+</TabItem>
+</Tabs>
